--- a/WebContent/css/message.css
+++ b/WebContent/css/message.css
@@ -1,42 +1,31 @@
 @CHARSET "UTF-8";
-
-#search {
-	width: 250px;
-	margin: 0 auto;
-}
-
 table {
 	border-collapse: collapse;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 	text-align: center;
-	width:"80%";
+	width: 80%
 }
 
 table tr, table td {
 	border: 1px solid #cad9ea;
 	color: #666;
+	height:40px;
 }
 
+ 
 table tr:nth-child(even) {
 	background: #F5FAFA;
 }
 
-span {
-	margin: 15px;
+.type{
+	margin: 20px auto;
+	width:100px;
+	font-size:24px;
+	
 }
 
-#loading {
-	margin: 25px auto;
-	width: 150px;
-	height: 60px;
-}
 
-#result {
-	margin: 100px auto;
-	width: 300px;
-	font-size: 18px;
-	text-align:center
-}
+
