--- a/WebContent/css/message.css
+++ b/WebContent/css/message.css
@@ -1,10 +1,10 @@
 @CHARSET "UTF-8";
-table {
+/* table {
 	border-collapse: collapse;
 	margin-left: auto;
 	margin-right: auto;
-/* 	margin-top: 20px; */
-/* 	margin-bottom: 30px; */
+	margin-top: 20px;
+	margin-bottom: 30px;
 	text-align: center;
 	width: 80%
 }
@@ -18,14 +18,44 @@ table tr, table td {
  
 table tr:nth-child(even) {
 	background: #F5FAFA;
+} */
+
+table {
+
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	text-align: center;
+	width: 80%
 }
 
-/* .type{
-	margin: 20px auto;
-	width:100px;
-	font-size:24px;
-	
-} */
+table td, table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+table tr:nth-child(even){background-color: #f2f2f2;}
+
+table tr:hover {background-color: #ddd;}
+
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: rgb(25,138,241);
+    color: white;
+}
+
+span{
+	margin:5px;
+}
+
+
+
+
 
 
 
