projet dar a tester

--- a/WebContent/assets/admin/pages/css/profile.css
+++ b/WebContent/assets/admin/pages/css/profile.css
@@ -22,9 +22,9 @@ New Profile Page
 
 .profile-userpic img {
   float: none;
-  margin: 0 auto;
-  width: 50%;
-  height: 50%;
+  margin: 0 15;
+  width: 90%;
+  height: 33%;
   -webkit-border-radius: 50% !important;
   -moz-border-radius: 50% !important;
   border-radius: 50% !important;
